<resources>
    <string name="app_name">Kharcha Bhachat</string>
    <string name="item_name">Item Name</string>
    <string name="value">Value</string>
    <string name="btn_add">ADD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_view">View</string>
    <string name="btn_update">Update</string>
    <string name="et_id">ID</string>
    <string name="tv_id">ID</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_delete">Delete</string>
    <string name="btn">Delete</string>
</resources>
