<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update">

    <TextView
        android:id="@+id/tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Iteams Name"
        />
    <EditText
        android:id="@+id/et_item"
        android:layout_below="@id/tv_item"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_value"
        android:layout_below="@+id/et_item"
        android:text="Items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_below="@+id/tv_value"
        android:id="@+id/et_value"
        android:hint="@string/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_id"
        android:layout_below="@+id/et_value"
        android:text="@string/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_below="@+id/tv_id"
        android:id="@+id/et_id"
        android:hint="@string/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_update"
        android:text="@string/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>